Add cross-cutting audit log for case lifecycle events (BE-15).
Record every status change, agent action, and coordinator decision with actor and timestamp, and expose GET /api/cases/{id}/audit.

Co-authored-by: Cursor <cursoragent@cursor.com>